--- a/html/index.html
+++ b/html/index.html
@@ -140,10 +140,25 @@ $(document).ready(function() {
       </div>
 
       <script type="text/javascript">
-        function jltos(jsonobj) {
+        function _highlight(what_) {
+          $('.img-item').each(function(){
+            var  item = $(this).attr("hashid");
+            if (what_ == 0 || item.match(what_)) {
+              $(this).removeClass("jg-faded");
+              $(this).addClass("jg-unfaded");
+            }
+            else {
+              $(this).removeClass("jg-unfaded");
+              $(this).addClass("jg-faded");
+            }
+          });
+        }
+
+        function jltos(what_, jsonobj) {
 	  var s = '';
+          s += '<b><a href="#" onclick="_highlight(0);">' + what_ + ':</a></b> ' + jsonobj.length;
 	  for (var i=0; i<jsonobj.length; ++i) {
-	    s += '<b>' + jsonobj[i].id + '</b>: ' + jsonobj[i].count + '  ';
+            s += '  <b><a href="#" onclick="_highlight(' +  jsonobj[i].hashid + ');">' + jsonobj[i].id + '</a></b>: ' + jsonobj[i].count + '  ';
 	  }
 	  return s;
 	}
@@ -152,12 +167,12 @@ $(document).ready(function() {
           var imgdata = JSON.parse(jsondata);
           img_block_ttl = imgdata.data.length + 1 ;
 
-	  $("#images").append('<div id=img_block0 style="width: ' + window.innerWidth + 'px; background: black; color: grey;"><h1></h1><h5>' + imgdata.count + ' entries / ' + imgdata.data.length + ' sections<h5><h6>' + imgdata.date_start + ' .. ' + imgdata.date_end + '</h6><div style="padding: 13px;"><p>' + jltos(imgdata.cameras) + '</p><p>' + jltos(imgdata.lenses) + '</p><p>' + jltos(imgdata.focal_lengths) + '</p></div>');
+	  $("#images").append('<div id=img_block0 style="width: ' + window.innerWidth + 'px; background: black; color: grey;"><h1></h1><h5>' + imgdata.count + ' entries / ' + imgdata.data.length + ' sections<h5><h6>' + imgdata.date_start + ' .. ' + imgdata.date_end + '</h6><div style="padding: 13px;"><p>' + jltos("camera", imgdata.cameras) + '</p><p>' + jltos("lens", imgdata.lenses) + '</p><p>' + jltos("focal_length", imgdata.focal_lengths) + '</p></div>');
 
           for (var i=0; i<imgdata.data.length; i++) {
             var block = imgdata.data[i];
 	    var ibi = i + 1;
-	    $("#images").append('<div id=img_block' + ibi + ' style="width: ' + window.innerWidth + 'px; background: black; color: grey;"><a href=' + encodeURI(block.path) + '><h1>' + block.id + '</h1></a><h5>' + block.count + ' entries<h5><h6>' + block.date_start + ' .. ' + block.date_end + '</h6><div style="padding: 13px;"><p>' + jltos(block.cameras) + '</p><p>' + jltos(block.lenses) + '</p><p>' + jltos(block.focal_lengths) + '</p></div>');
+	    $("#images").append('<div id=img_block' + ibi + ' style="width: ' + window.innerWidth + 'px; background: black; color: grey;"><a href=' + encodeURI(block.path) + '><h1>' + block.id + '</h1></a><h5>' + block.count + ' entries<h5><h6>' + block.date_start + ' .. ' + block.date_end + '</h6><div style="padding: 13px;"><p>' + jltos("camera", block.cameras) + '</p><p>' + jltos("lens", block.lenses) + '</p><p>' + jltos("focal_length", block.focal_lengths) + '</p></div>');
             for (var j=0; j<block.images.length; j++) {
               var obj = block.images[j];
 	      var caption = '<div class="caption">' + obj.datetime;
@@ -175,7 +190,7 @@ $(document).ready(function() {
                   alts += '</div>';
                 }
               }
-              $("#images").append('<div><a class="img-item" rating=' + obj.rating + ' href="' + encodeURI(obj.src) + '" target="_blank"><img src="' + obj.thumb + '"/></a>' + caption + '</div>' + alts);
+              $("#images").append('<div><a class="img-item" rating=' + obj.rating + ' hashid="' + obj.hashid + '" href="' + encodeURI(obj.src) + '" target="_blank"><img src="' + obj.thumb + '"/></a>' + caption + '</div>' + alts);
             }
             imgs_ttl += block.images.length;
             $("#total").text(imgs_ttl + ' images');
